--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.2",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "fzaninotto/faker": "1.9.2",
         "symfony/browser-kit": "^5.3",
         "symfony/css-selector": "^5.3",
         "symfony/debug-bundle": "^5.3",
