--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -5,9 +5,11 @@ framework:
 when@dev:
     framework:
         mailer:
+            # this disables delivery of messages entirely
             dsn: 'null://null'
 
 when@test:
     framework:
         mailer:
+            # this disables delivery of messages entirely
             dsn: 'null://null'
